# hydrogen-atom

./: README.md  main.py
hydrogen/: CMakeLists.txt
hydrogen/src/: hydrogen.cpp  hydrogen.h  main.cpp
test/: test2.py
